# AlgorithmicDifferentiation

./: CMakeLists.txt  README.md
case_studies/: CMakeLists.txt
case_studies/diffusion/: CMakeLists.txt
case_studies/diffusion/f/: main.cpp  ref_results
case_studies/diffusion/fd/: approx_results  main.cpp
case_studies/diffusion/ga1s/: main.cpp
case_studies/diffusion/ga1s_cp/: main.cpp  ref_results
case_studies/diffusion/ga1s_cp_sls/: main.cpp
case_studies/diffusion/ga1s_sls/: main.cpp  ref_results
case_studies/diffusion/gt1s/: main.cpp  ref_results
case_studies/diffusion/gt2s_ga1s/: main.cpp  ref_results
case_studies/diffusion/gt2s_ga1s_cp/: main.cpp  ref_results
case_studies/diffusion/gt2s_ga1s_cp_sls/: main.cpp
case_studies/diffusion/gt2s_ga1s_sls/: main.cpp  ref_results
case_studies/diffusion/gt2s_gt1s/: main.cpp  ref_results
case_studies/diffusion/include/: f.hpp  f_residual_Jacobian_by_hand.hpp  (+1 more)
case_studies/mc/: CMakeLists.txt  README  ad_data_view.hpp  config.h  local_vols.hpp  mrg32k3a.h  scenario_1.in  scenario_2.in  scenario_3.in  scenario_4.in  scenario_5.in  scenario_6.in
case_studies/pde/: CMakeLists.txt  README  ad_data_view.hpp  config.h  lapack.cpp  lapack.hpp  local_vols.hpp  scenario_2.in  scenario_3.in  scenario_4.in  scenario_5.in  scenario_6.in
case_studies/race/: CMakeLists.txt  x22.hpp
examples/: CMakeLists.txt  requiredVersions.cmake
examples/fd_ga1s/: driver.cpp  driver.hpp  main.cpp  ref_results
examples/ga1s/: driver.cpp  main.cpp  ref_results
examples/ga1s_Jacobian/: driver.cpp  driver.hpp  f.hpp  main.cpp  ref_results
examples/ga1s_acm/: main.cpp  ref_results
examples/ga1s_cp_loop_equidist/: driver.cpp  driver.hpp  g.hpp  g_gap.hpp  main.cpp  ref_results
examples/ga1s_cp_loop_rec/: driver.cpp  g_gap.hpp  main.cpp  ref_results
examples/ga1s_ensemble/: driver.cpp  driver.hpp  main.cpp  ref_results_lin
examples/ga1s_external_manual/: driver.cpp  driver.hpp  f.hpp  g.hpp  g_a1s.hpp  g_gap.hpp  main.cpp  ref_results
examples/ga1s_jacobian_preaccumulation/: driver.cpp  ref_results
examples/ga1s_joint/: driver.cpp  driver.hpp  main.cpp
examples/ga1s_mod/: main.cpp  ref_results  timestepping.hpp
examples/ga1s_multiple_adjoint_vectors/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  driver.cpp  f.h  main.cpp  ref_results
examples/ga1s_preaccumulation/: driver.cpp
examples/ga1s_preaccumulation_gradient_t/: f.hpp  g_gap.hpp  main.cpp
examples/ga1s_recompute_all/: driver.cpp  driver.hpp  f.hpp  g.hpp  g_gap.hpp
examples/ga1s_recursive_recompute_all/: driver.cpp  driver.hpp  f.hpp  g_gap.hpp
examples/ga1s_reverse_accumulation_newton/: driver.cpp  main.cpp  my_exp.hpp  my_sqrt.hpp  ref_results
examples/ga1s_reverse_accumulation_simple_exp/: driver.cpp  driver.hpp  main.cpp  my_exp.hpp  ref_results
examples/ga1s_reverse_accumulation_simple_sqrt/: driver.cpp  my_sqrt.hpp  ref_results
examples/ga1s_scenarios/: driver.cpp  driver.hpp  main.cpp  ref_results
examples/ga1s_tape_data_types/: driver.cpp  driver.hpp  main.cpp  ref_results
examples/ga1s_user_defined_adjoint/: f.hpp  g.hpp  g_gap.hpp
examples/ga1sm/: driver.cpp
examples/ga1sm_ensemble/: driver.cpp  f.hpp  g.hpp  g_gap.hpp  main.cpp  ref_results_win
examples/ga1sm_user_defined_adjoint/: driver.cpp  f.hpp  g.hpp  g_gap.hpp  main.cpp  ref_results
examples/ga1v/: driver.cpp  driver.hpp  main.cpp
examples/ga1vm/: driver.cpp  ref_results
examples/ga2s_ga1s/: driver.cpp  main.cpp  ref_results
examples/ga2s_gt1s/: driver.cpp  driver.hpp  main.cpp  ref_results
examples/gbcp/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  driver.cpp  driver.hpp  f.hpp  main.cpp  ref_results
examples/gt1s/: driver.cpp  driver.hpp  main.cpp  ref_results
examples/gt1s_Jacobian/: driver.cpp  driver.hpp  main.cpp  ref_results
examples/gt1s_fd_smoothing/: driver.cpp  g_t1s.hpp  main.cpp  ref_results
examples/gt1s_linear_smoothing/: driver.cpp  f.hpp  g.hpp  g_t1s.hpp  main.cpp
examples/gt1s_nonlinear_smoothing/: driver.cpp  driver.hpp  g_t1s.hpp  ref_results
examples/gt1s_user_defined_tangent/: driver.cpp  driver.hpp  f.hpp  g.hpp  g_t1s.hpp  ref_results
examples/gt1v/: driver.cpp  driver.hpp  main.cpp  ref_results
examples/gt2s_ga1s/: driver.cpp  driver.hpp  main.cpp  ref_results
examples/gt2s_ga1s_Hessian/: driver.cpp  driver.hpp  f.hpp  main.cpp  ref_results
examples/gt2s_ga1s_cp_loop_equidist/: driver.cpp  driver.hpp  f.hpp  main.cpp
examples/gt2s_ga1s_cp_loop_rec/: driver.cpp  driver.hpp  f.hpp  g.hpp  g_gap.hpp  main.cpp  ref_results
examples/gt2s_ga1s_ensemble/: driver.cpp  driver.hpp  g_gap.hpp  main.cpp  ref_results_lin  ref_results_win
examples/gt2s_ga1s_external_manual/: driver.cpp  driver.hpp  f.hpp  g_gap.hpp  main.cpp  ref_results
examples/gt2s_ga1s_jacobian_preaccumulation/: driver.cpp  ref_results
examples/gt2s_ga1s_joint/: driver.cpp  f.hpp  g.hpp  g_gap.hpp  main.cpp
examples/gt2s_ga1s_multiple_adjoint_vectors/: driver.cpp  driver.h  ref_results
examples/gt2s_ga1s_preaccumulation/: driver.cpp  f.hpp  g_gap.hpp  ref_results
examples/gt2s_ga1s_preaccumulation_gradient_t/: driver.hpp  g.hpp  g_gap.hpp  main.cpp
examples/gt2s_ga1s_user_defined_adjoint/: driver.cpp  driver.hpp  main.cpp  ref_results
examples/gt2s_gt1s/: driver.cpp  driver.hpp  main.cpp  ref_results
examples/gt2s_gt1s_Hessian/: driver.cpp  driver.hpp  f.hpp  main.cpp  ref_results
examples/gt3s_gt2s_ga1s/: driver.cpp  driver.hpp  main.cpp  ref_results
examples/gt3s_gt2s_gt1s/: driver.cpp  driver.hpp  main.cpp  ref_results
examples/gv/: driver.cpp  f.hpp  ref_results
examples/gv_ga1s/: driver.cpp  main.cpp  ref_results
examples/gv_ga1s_mask/: driver.cpp  driver.hpp  f.hpp  main.cpp  ref_results
examples/gv_gt1s/: driver.cpp  main.cpp  ref_results
examples/gv_gt1s_mask/: driver.cpp  driver.hpp  ref_results
examples/gv_mask/: driver.cpp  driver.hpp  f.hpp  f_branch.hpp  main.cpp  ref_results
examples/p1f/: main.cpp  ref_results
examples/sparse_interpret/: main.cpp  ref_results
(+81 files in other folders)
