function(add_case_study parent_dir)
  dco_get_subdirs(${parent_dir} subdirs)

  foreach(dir ${subdirs})
    dco_get_test_name(name ${dir}/dummy.cpp)
    file(GLOB sources_cpp "${dir}/*.cpp")
    if (sources_cpp)
      add_executable(${name} ${sources_cpp})
      target_link_libraries(${name} ${DCO_CPP_LIBRARIES})
      add_test(${name} ${name})
    
      add_dependencies(case_studies ${name})
    endif()
  endforeach()
endfunction()

if(3.4 VERSION_GREATER "${DCO_CPP_VERSION_MAJOR}.${DCO_CPP_VERSION_MINOR}")
  MESSAGE("dco/c++ case studies: Skipped. Required version: 3.4. Installed dco/c++ version: ${DCO_CPP_VERSION_MAJOR}.${DCO_CPP_VERSION_MINOR}.")
else()
  dco_get_subdirs(. subdirs)
  add_custom_target(case_studies)
  foreach(dir ${subdirs})
    add_case_study(${dir})
  endforeach()
endif()
